{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 26,
  "lineage": "7e55c265-0ae6-6e81-3665-be6fd51dfea7",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "jenkins-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-07f07a6e1060cd2a8",
            "arn": "arn:aws:ec2:ap-south-1:768052528567:instance/i-0478416c0e6506867",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "jenkins-instance-profile",
            "id": "i-0478416c0e6506867",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "terraform",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-018f5b25cb073e83a"
              }
            ],
            "primary_network_interface_id": "eni-018f5b25cb073e83a",
            "private_dns": "ip-10-0-0-61.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.61",
            "public_ip": "43.205.120.174",
            "region": "ap-south-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0120580a6fc203a4f",
                "volume_size": 20,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-018f133bbba8ecc2e"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d0f574a074ad1caf",
            "tags": {
              "Name": "jenkins-server"
            },
            "tags_all": {
              "Name": "jenkins-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-018f133bbba8ecc2e"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_iam_instance_profile.our-instance-profile",
            "aws_iam_role.our-iam-role",
            "aws_security_group.our-security-group",
            "aws_subnet.our-public-subnet",
            "aws_vpc.our-vpc",
            "data.aws_ami.latest",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "nexus-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-07f07a6e1060cd2a8",
            "arn": "arn:aws:ec2:ap-south-1:768052528567:instance/i-0afee5d7f4c3f4c7b",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0afee5d7f4c3f4c7b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "terraform",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0436f91b8e300c8da"
              }
            ],
            "primary_network_interface_id": "eni-0436f91b8e300c8da",
            "private_dns": "ip-10-0-0-189.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.189",
            "public_ip": "13.233.61.44",
            "region": "ap-south-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0eac518a2a3300cc3",
                "volume_size": 20,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0f92397ed4afb8594"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d0f574a074ad1caf",
            "tags": {
              "Name": "nexus-server"
            },
            "tags_all": {
              "Name": "nexus-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0f92397ed4afb8594"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.our-security-group-for-nexus",
            "aws_subnet.our-public-subnet",
            "aws_vpc.our-vpc",
            "data.aws_ami.latest",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "sonar-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-07f07a6e1060cd2a8",
            "arn": "arn:aws:ec2:ap-south-1:768052528567:instance/i-00916bd3af486410e",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00916bd3af486410e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "terraform",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0177f5c10536ffee9"
              }
            ],
            "primary_network_interface_id": "eni-0177f5c10536ffee9",
            "private_dns": "ip-10-0-0-21.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.21",
            "public_ip": "13.235.115.126",
            "region": "ap-south-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0dab7a346eca1229b",
                "volume_size": 20,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-019e632297a2f3003"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d0f574a074ad1caf",
            "tags": {
              "Name": "sonar-server"
            },
            "tags_all": {
              "Name": "sonar-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-019e632297a2f3003"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.our-Security-Group-for-sonar",
            "aws_subnet.our-public-subnet",
            "aws_vpc.our-vpc",
            "data.aws_ami.latest",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "our-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:768052528567:internet-gateway/igw-064e4ec5d4d0b6cb0",
            "id": "igw-064e4ec5d4d0b6cb0",
            "owner_id": "768052528567",
            "region": "ap-south-1",
            "tags": {
              "Environment": "dev",
              "Name": "Our-IGW"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "Our-IGW"
            },
            "vpc_id": "vpc-0fb61e1beab6cb1e4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.our-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "our-public-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-064e4ec5d4d0b6cb0",
            "id": "r-rtb-0a9a01496aa67baed1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "ap-south-1",
            "route_table_id": "rtb-0a9a01496aa67baed",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.our-igw",
            "aws_route_table.our-public-route-table",
            "aws_vpc.our-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "our-public-route2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-064e4ec5d4d0b6cb0",
            "id": "r-rtb-03fce687ce02bd4ed1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "ap-south-1",
            "route_table_id": "rtb-03fce687ce02bd4ed",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.our-igw",
            "aws_route_table.our-public-route-table2",
            "aws_vpc.our-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "our-private-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:768052528567:route-table/rtb-0912c099f87eb0930",
            "id": "rtb-0912c099f87eb0930",
            "owner_id": "768052528567",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "Our-Private-Route-Table"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "Our-Private-Route-Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fb61e1beab6cb1e4"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.our-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "our-private-route-table2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:768052528567:route-table/rtb-092957a99ceab9710",
            "id": "rtb-092957a99ceab9710",
            "owner_id": "768052528567",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "Our-Private-Route-Table"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "Our-Private-Route-Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fb61e1beab6cb1e4"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.our-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "our-public-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:768052528567:route-table/rtb-0a9a01496aa67baed",
            "id": "rtb-0a9a01496aa67baed",
            "owner_id": "768052528567",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "Our-Public-Route-Table"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "Our-Public-Route-Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fb61e1beab6cb1e4"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.our-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "our-public-route-table2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:768052528567:route-table/rtb-03fce687ce02bd4ed",
            "id": "rtb-03fce687ce02bd4ed",
            "owner_id": "768052528567",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "Our-Public-Route-Table"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "Our-Public-Route-Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fb61e1beab6cb1e4"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.our-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "our-private-route-table-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00ee706849612d048",
            "region": "ap-south-1",
            "route_table_id": "rtb-0912c099f87eb0930",
            "subnet_id": "subnet-01a36717332a1bcb2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.our-private-route-table",
            "aws_subnet.our-private-subnet",
            "aws_vpc.our-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "our-private-route-table-association2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d2c2bc86afd99685",
            "region": "ap-south-1",
            "route_table_id": "rtb-092957a99ceab9710",
            "subnet_id": "subnet-0e3cd7ab0a0067e05"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.our-private-route-table2",
            "aws_subnet.our-private-subnet2",
            "aws_vpc.our-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "our-public-route-table-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d0bb85dc0481b049",
            "region": "ap-south-1",
            "route_table_id": "rtb-0a9a01496aa67baed",
            "subnet_id": "subnet-0d0f574a074ad1caf"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.our-public-route-table",
            "aws_subnet.our-public-subnet",
            "aws_vpc.our-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "our-public-route-table-association2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f947680fc9ea39b1",
            "region": "ap-south-1",
            "route_table_id": "rtb-03fce687ce02bd4ed",
            "subnet_id": "subnet-0bfd05f73260f15f6"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.our-public-route-table2",
            "aws_subnet.our-public-subnet2",
            "aws_vpc.our-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "our-Security-Group-for-sonar",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:768052528567:security-group/sg-019e632297a2f3003",
            "description": "Our Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-019e632297a2f3003",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 9000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9000
              }
            ],
            "name": "OOur-Security-Group-for-sonar",
            "name_prefix": "",
            "owner_id": "768052528567",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "Our-Security-Group-for-sonar"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "Our-Security-Group-for-sonar"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fb61e1beab6cb1e4"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "768052528567",
            "id": "sg-019e632297a2f3003",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.our-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "our-security-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:768052528567:security-group/sg-018f133bbba8ecc2e",
            "description": "Our Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-018f133bbba8ecc2e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "Our-Security-Group",
            "name_prefix": "",
            "owner_id": "768052528567",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "Our-Security-Group"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "Our-Security-Group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fb61e1beab6cb1e4"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "768052528567",
            "id": "sg-018f133bbba8ecc2e",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.our-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "our-security-group-for-nexus",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:768052528567:security-group/sg-0f92397ed4afb8594",
            "description": "Our Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f92397ed4afb8594",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8081,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8081
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "Our-Security-Group-for-nexus",
            "name_prefix": "",
            "owner_id": "768052528567",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "Our-Security-Group-for-nexus"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "Our-Security-Group-for-nexus"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fb61e1beab6cb1e4"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "768052528567",
            "id": "sg-0f92397ed4afb8594",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.our-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "our-private-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:768052528567:subnet/subnet-01a36717332a1bcb2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01a36717332a1bcb2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "768052528567",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Environment": "dev",
              "Name": "Our-Private-Subnet"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "Our-Private-Subnet"
            },
            "vpc_id": "vpc-0fb61e1beab6cb1e4"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "768052528567",
            "id": "subnet-01a36717332a1bcb2",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.our-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "our-private-subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:768052528567:subnet/subnet-0e3cd7ab0a0067e05",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e3cd7ab0a0067e05",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "768052528567",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Environment": "dev",
              "Name": "Our-Private-Subnet2"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "Our-Private-Subnet2"
            },
            "vpc_id": "vpc-0fb61e1beab6cb1e4"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "768052528567",
            "id": "subnet-0e3cd7ab0a0067e05",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.our-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "our-public-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:768052528567:subnet/subnet-0d0f574a074ad1caf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d0f574a074ad1caf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "768052528567",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Environment": "dev",
              "Name": "Our-Public-Subnet"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "Our-Public-Subnet"
            },
            "vpc_id": "vpc-0fb61e1beab6cb1e4"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "768052528567",
            "id": "subnet-0d0f574a074ad1caf",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.our-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "our-public-subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:768052528567:subnet/subnet-0bfd05f73260f15f6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bfd05f73260f15f6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "768052528567",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Environment": "dev",
              "Name": "Our-Public-Subnet"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "Our-Public-Subnet"
            },
            "vpc_id": "vpc-0fb61e1beab6cb1e4"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "768052528567",
            "id": "subnet-0bfd05f73260f15f6",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.our-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "our-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:768052528567:vpc/vpc-0fb61e1beab6cb1e4",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0443141c7e8706a78",
            "default_route_table_id": "rtb-0f91c02417b78ca90",
            "default_security_group_id": "sg-078f9379e48469163",
            "dhcp_options_id": "dopt-0c41f297e69da0168",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0fb61e1beab6cb1e4",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f91c02417b78ca90",
            "owner_id": "768052528567",
            "region": "ap-south-1",
            "tags": {
              "Environment": "dev",
              "Name": "Our-VPC"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "Our-VPC"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}